--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             <span></span>
             <span></span>
           </div>
+          <div id="task">Tasks</div>
         </div>
       </div>
     </div>
